--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Твоя Панк-Рок Группа</title>
+    <title>K@NTORA JOHN DOE</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nosifer&family=Rubik+Marker+Hatch&display=swap');
@@ -42,8 +42,8 @@
     <section id="music" class="content-section">
         <h2>Наше музло, ебать его в сраку!</h2>
         <div class="music-links">
-            <a href="[ССЫЛКА НА СПОТИФАЙ]" target="_blank" class="spotify-link">Слушать на Spotify</a>
-            <a href="[ССЫЛКА НА ЮТУБ]" target="_blank" class="youtube-link">Смотреть на YouTube</a>
+            <a href="https://open.spotify.com/artist/1a7jttnMMXxpMnUSdkN13a?si=gDpnvEAfRd-EBe7cRdvOZg" target="_blank" class="spotify-link">Слушать на Spotify</a>
+            <a href="https://youtube.com/channel/UCCnhdrQ1hXb0T_JsTWd8rZQ?si=Rz292JHLW6dn1gXV" target="_blank" class="youtube-link">Смотреть на YouTube</a>
         </div>
     </section>
         <br><br><br><br><br><br><br><br>
