--- a/koncerts.html
+++ b/koncerts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Концерты - Твоя Панк-Рок Группа</title>
+    <title>Концерты - K@NTORA JOHN DOE</title>
     <link rel="stylesheet" href="concert.css"> <style>
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nosifer&family=Rubik+Marker+Hatch&display=swap');
         </style>
@@ -88,7 +88,7 @@
     </section>  
         <br><br><br><br><br><br><br><br><br><br>
     <footer>
-        <p class="centered-text">&copy; 2025 НАЗВАНИЕ ТВОЕЙ ГРУППЫ. Все права похуй.</p>
+        <p class="centered-text">&copy; 2025 K@NTORA JOHN DOE. Все права похуй.</p>
     </footer>
 
 </body>
