--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K@NTORA JOHN DOE</title>
+    <title>Твоя Панк-Рок Группа</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nosifer&family=Rubik+Marker+Hatch&display=swap');
         </style>
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </head>
         
 </head>
 <body>
@@ -42,8 +43,15 @@
     <section id="music" class="content-section">
         <h2>Наше музло, ебать его в сраку!</h2>
         <div class="music-links">
-            <a href="https://open.spotify.com/artist/1a7jttnMMXxpMnUSdkN13a?si=gDpnvEAfRd-EBe7cRdvOZg" target="_blank" class="spotify-link">Слушать на Spotify</a>
-            <a href="https://youtube.com/channel/UCCnhdrQ1hXb0T_JsTWd8rZQ?si=Rz292JHLW6dn1gXV" target="_blank" class="youtube-link">Смотреть на YouTube</a>
+            <a href="https://open.spotify.com/artist/1a7jttnMMXxpMnUSdkN13a?si=gDpnvEAfRd-EBe7cRdvOZg" target="_blank" class="spotify-link">
+                <i class="fab fa-spotify"></i> Слушать на Spotify
+            </a>
+            <a href="https://youtube.com/channel/UCCnhdrQ1hXb0T_JsTWd8rZQ?si=Rz292JHLW6dn1gXV" target="_blank" class="youtube-link">
+                <i class="fab fa-youtube"></i> Смотреть на YouTube
+            </a>
+            <a href="https://on.soundcloud.com/xf7bp43Q6eMkNzMu7" target="_blank" class="soundcloud-link">
+                <i class="fab fa-soundcloud"></i> Слушать на SoundCloud 
+            </a>
         </div>
     </section>
         <br><br><br><br><br><br><br><br>
@@ -56,4 +64,5 @@
         // Например, при наведении на пункты меню или на логотип
     </script>
 </body>
+</html>
 </html>
