--- a/koncerts.html
+++ b/koncerts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Концерты - K@NTORA JOHN DOE</title>
+    <title>Концерты - Твоя Панк-Рок Группа</title>
     <link rel="stylesheet" href="concert.css"> <style>
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nosifer&family=Rubik+Marker+Hatch&display=swap');
         </style>
@@ -35,60 +35,40 @@
                         <h3 class="concert-venue">DÜLMEN, HAUPTBAHNHOF</h3>
                         <p class="concert-city">NRW</p>
                         <p class="concert-time">Начало: 17:00</p>
-                        <a href="#" class="ticket-button">Координаты (не ну а хули)</a>
+                        <a href="https://maps.app.goo.gl/Y9tqmhhSBJ3Xaqvr8" class="ticket-button">Координаты (не ну а хули)</a>
+                    </div>
+                </li>
+                <li class="concert-item">
+                    <div class="concert-details">
+                        <span class="concert-date">19 Апреля</span>
+                        <h3 class="concert-venue">FREIBURG, Gbf</h3>
+                        <p class="concert-city">Baden-Württemberg</p>
+                        <p class="concert-time">Начало: 21:00</p>
+                        <a href="https://maps.app.goo.gl/Y51cm5mst43pqKfb6" class="ticket-button">Координаты (А че нет-то епта?)</a>
                     </div>
                 </li>
                 <li class="concert-item">
                     <div class="concert-details">
                         <span class="concert-date">***</span>
                         <h3 class="concert-venue">***</h3>
-                        <p class="concert-city">NRW</p>
+                        <p class="concert-city">?</p>
                         <p class="concert-time">Начало: ***</p>
-                        <a href="#" class="ticket-button">Координаты (А че нет-то епта?)</a>
-                    </div>
-                </li>
-                <li class="concert-item">
-                    <div class="concert-details">
-                        <span class="concert-date">***</span>
-                        <h3 class="concert-venue">***</h3>
-                        <p class="concert-city">NRW</p>
-                        <p class="concert-time">Начало: ***</p>
-                        <a href="#" class="ticket-button">Координаты (пока!)</a>
+                        <a href="#" class="ticket-button">Координаты (пока нет!)</a>
                     </div>
                 </li>
             </ul>
         </section>
 
         <section class="past-concerts">
-            <h2 class="section-title">ПРОШЛЫЕ УГАРЫ, БЛЯ!</h2>
-            <p class="centered-text">Тут можно будет добавить инфу о прошлых концертах, фотки, видосы и прочий угар.</p>
+            <h2 class="section-title">WTF IS CONCERT?</h2>
+            <h4 class="centered-text">На самом деле мы не делаем концерты. Назвать эту хуету концертами было бы кощунство! Мы скорее ебашим полнейший угар. Если вы не чурка и не фашист, приходите по координатам! Ко всем относимся как к своим, ебашим все что захотите(кроме мияги, пошёл он нахуй), денег не просим, пивом угостим! Ждём вас, мразей, до скорого! <3</h4>
         </section>
     </main>
 
-    <section class="concert-media">
-        <h2 class="section-title">ВИДЕО И ФОТО С КОНЦЕРТОВ, БЛЯ!</h2>
-
-        
-
-        <div class="photo-gallery">
-            <h3 class="media-subtitle">Моменты пойманные в угаре:</h3>
-            <div class="photo-carousel">
-                <img src="image/2.jpg" alt="Фото с концерта">
-                <img src="" alt="Фото с концерта">
-                <img src="image/3.jpg" alt="Фото с концерта">
-                <img src="image/4.jpg" alt="Фото с концерта">
-                <img src="image/5.jpg" alt="Фото с концерта">
-                <img src="image/6.jpg" alt="Фото с концерта">
-                </div>
-            <div class="carousel-controls">
-                <button class="prev-button">←</button>
-                <button class="next-button">→</button>
-            </div>
-        </div>
-    </section>  
+ 
         <br><br><br><br><br><br><br><br><br><br>
     <footer>
-        <p class="centered-text">&copy; 2025 K@NTORA JOHN DOE. Все права похуй.</p>
+        <p class="centered-text">&copy; 2025 НАЗВАНИЕ ТВОЕЙ ГРУППЫ. Все права похуй.</p>
     </footer>
 
 </body>
