--- a/koncerts.html
+++ b/koncerts.html
@@ -68,7 +68,7 @@
  
         <br><br><br><br><br><br><br><br><br><br>
     <footer>
-        <p class="centered-text">&copy; 2025 НАЗВАНИЕ ТВОЕЙ ГРУППЫ. Все права похуй.</p>
+        <p class="centered-text">&copy; 2025 K@NTORA JOHN DOE. Все права похуй.</p>
     </footer>
 
 </body>
