--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="menu-item"><a href="#music">Музло</a></li>
                 <li class="menu-item"><a href="koncerts.html">Концерты (скоро, бля!)</a></li>
                 <li class="menu-item"><a href="#">Мерч (пока нет, хули)</a></li>
+                <li class="menu-item"><a href="blog.html">Новости</a></li>
             </ul>
         </nav>
         <div class="logo">
@@ -38,6 +39,26 @@
             <li>Бас: NONE</li>
             <li>Барабаны: MAKS "GOYDOV"</li>
         </ul>
+    </section>
+
+    <section class="news-section content-section">
+        <h2 class="section-title">СВЕЖИЕ НОВОСТИ, БЛЯ!</h2>
+        <div class="news-grid">
+            <article class="news-item">
+                <h3 class="news-title">ОТЫГРАЛИ ОХУЕННЫЙ КОНЦЕРТ В "ПОДВАЛЕ"!</h3>
+                <span class="news-date">20 Марта 2025</span>
+                <p class="news-excerpt">Вчера в клубе "Подвал" был просто угар! Спасибо всем, кто пришел и устроил с нами настоящий панк-рок беспредел! Фотки и видосы скоро будут!</p>
+                <a href="#" class="read-more-link">Читать дальше &rarr;</a>
+            </article>
+    
+            <article class="news-item">
+                <h3 class="news-title">ЗАПИСАЛИ НОВЫЙ ТРЕК, ЕБАТЬ!</h3>
+                <span class="news-date">15 Марта 2025</span>
+                <p class="news-excerpt">Мы тут засели на репбазе и записали новый трек! Скоро выложим его в сеть, так что следите за новостями, чтоб не пропустить этот ядерный заряд!</p>
+                <a href="#" class="read-more-link">Читать дальше &rarr;</a>
+            </article>
+    
+            </div>
     </section>
 
     <section id="music" class="content-section">
