--- a/koncerts.html
+++ b/koncerts.html
@@ -18,6 +18,7 @@
                 <li class="menu-item"><a href="index.html#music">Музло</a></li>
                 <li class="menu-item"><a href="#">Концерты</a></li>
                 <li class="menu-item"><a href="#">Мерч (скоро, бля!)</a></li>
+                <li class="menu-item"><a href="blog.html">Новости</a></li>
             </ul>
         </nav>
         <div class="logo">
@@ -40,7 +41,7 @@
                 </li>
                 <li class="concert-item">
                     <div class="concert-details">
-                        <span class="concert-date">20 Апреля</span>
+                        <span class="concert-date">19 Апреля</span>
                         <h3 class="concert-venue">FREIBURG, Gbf</h3>
                         <p class="concert-city">Baden-Württemberg</p>
                         <p class="concert-time">Начало: 21:00</p>
@@ -68,7 +69,7 @@
  
         <br><br><br><br><br><br><br><br><br><br>
     <footer>
-        <p class="centered-text">&copy; 2025 K@NTORA JOHN DOE. Все права похуй.</p>
+        <p class="centered-text">&copy; 2025 НАЗВАНИЕ ТВОЕЙ ГРУППЫ. Все права похуй.</p>
     </footer>
 
 </body>
