--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <h2 class="section-title">СВЕЖИЕ НОВОСТИ, БЛЯ!</h2>
         <div class="news-grid">
             <article class="news-item">
-                <h3 class="news-title">ОТЫГРАЛИ ОХУЕННЫЙ КОНЦЕРТ В "ПОДВАЛЕ"!</h3>
-                <span class="news-date">20 Марта 2025</span>
-                <p class="news-excerpt">Вчера в клубе "Подвал" был просто угар! Спасибо всем, кто пришел и устроил с нами настоящий панк-рок беспредел! Фотки и видосы скоро будут!</p>
-                <a href="#" class="read-more-link">Читать дальше &rarr;</a>
+                <h3 class="news-title">ЗАБЛУДИЛИСЬ/ПУСТИЛИСЬ ВО ВСЕ ТЯЖКИЕ!</h3>
+                <span class="news-date">7 Марта 2025</span>
+                <p class="news-excerpt">После очередного выступления рванули с Гойдовым на поезд, и попали в какие-то ебеня...я с букетом цветов, матери, он букетиком получше, гитара, шестаки, ну и хуяк - следующая остановка "Лутум" нахуй...</p>
+                <a href="blog.html" class="read-more-link">Читать дальше &rarr;</a>
             </article>
     
             <article class="news-item">
-                <h3 class="news-title">ЗАПИСАЛИ НОВЫЙ ТРЕК, ЕБАТЬ!</h3>
-                <span class="news-date">15 Марта 2025</span>
-                <p class="news-excerpt">Мы тут засели на репбазе и записали новый трек! Скоро выложим его в сеть, так что следите за новостями, чтоб не пропустить этот ядерный заряд!</p>
-                <a href="#" class="read-more-link">Читать дальше &rarr;</a>
+                <h3 class="news-title">АЛЬБОМ ЗАДЕРЖИВАЕТСЯ, ПРОСТИТЕ!!!</h3>
+                <span class="news-date">22 Марта 2025</span>
+                <p class="news-excerpt">Альбом будет немного придержан, так как я собрал группу из ебучих намасте-свэгеров которые сука день в неделю найти не могут для репетиций.</p>
+                <a href="blog.html" class="read-more-link">Читать дальше &rarr;</a>
             </article>
     
             </div>
