--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
                 <li class="menu-item"><a href="index.html">Главная</a></li>
                 <li class="menu-item"><a href="index.html#about">О нас</a></li>
                 <li class="menu-item"><a href="index.html#music">Музло</a></li>
-                <li class="menu-item"><a href="concerts.html">Концерты</a></li>
+                <li class="menu-item"><a href="koncerts.html">Концерты</a></li>
                 <li class="menu-item"><a href="blog.html">Новости</a></li>
                  <li class="menu-item"><a href="#">Мерч (скоро, бля!)</a></li>
             </ul>
