--- a/koncerts.html
+++ b/koncerts.html
@@ -32,16 +32,16 @@
             <ul class="concert-list">
                 <li class="concert-item">
                     <div class="concert-details">
-                        <span class="concert-date">25 Марта</span>
+                        <span class="concert-date">30 Марта</span>
                         <h3 class="concert-venue">DÜLMEN, HAUPTBAHNHOF</h3>
                         <p class="concert-city">NRW</p>
-                        <p class="concert-time">Начало: 17:00</p>
+                        <p class="concert-time">Начало: 15:00</p>
                         <a href="https://maps.app.goo.gl/Y9tqmhhSBJ3Xaqvr8" class="ticket-button">Координаты (не ну а хули)</a>
                     </div>
                 </li>
                 <li class="concert-item">
                     <div class="concert-details">
-                        <span class="concert-date">19 Апреля</span>
+                        <span class="concert-date">20 Апреля</span>
                         <h3 class="concert-venue">FREIBURG, Gbf</h3>
                         <p class="concert-city">Baden-Württemberg</p>
                         <p class="concert-time">Начало: 21:00</p>
@@ -69,7 +69,7 @@
  
         <br><br><br><br><br><br><br><br><br><br>
     <footer>
-        <p class="centered-text">&copy; 2025 НАЗВАНИЕ ТВОЕЙ ГРУППЫ. Все права похуй.</p>
+        <p class="centered-text">&copy; 2025 K@NTORA JOHN DOE. Все права похуй.</p>
     </footer>
 
 </body>
